# baleclient

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: workflow.yml
aiobale/client/: auth_cli.py  client.py
baleclient/: exceptions.py
baleclient/client/: auth_cli.py  client.py
baleclient/enums/: __init__.py  chat_type.py  group_type.py  list_load_mode.py  send_code.py  services.py  typing_type.py
baleclient/filters/: chat.py  content.py  logic.py  regex.py
baleclient/methods/: __init__.py
baleclient/types/: auth.py  ban_data.py  base.py  chat.py  chat_data.py  contact_request.py  ext.py  file_details.py  file_ext.py  file_input.py  full_user.py  group_peer.py  info_changed.py  info_message.py  inline_keyboard.py  int_bool.py  message.py  message_content.py  message_data.py  message_reaction.py  message_updates.py  other_message.py  peer.py  peer_data.py  peer_report.py  quoted_message.py  service_ext.py  thumbnail.py  updated_message.py  user.py
baleclient/utils/: file_helper.py  grpc_post.py  int64.py  links.py  random.py
balethon/: __init__.py  exceptions.py
balethon/client/: auth_cli.py  client.py  context_controller.py
balethon/dispatcher/: __init__.py  dispatcher.py  router.py
balethon/enums/: peer_source.py  peer_type.py  privacy_mode.py  report_kind.py  restriction.py  send_type.py
balethon/filters/: __init__.py
balethon/methods/: base.py
balethon/types/: __init__.py  (+34 more)
examples/: download_file.py  echo.py  gift_packet.py  group_mention.py  inline_keyboard.py  join_link.py  lifespan.py  magazine.py  send_file.py
(+135 files in other folders)
