[project]
name = "BaleClient"
version = "1.0.6"
description = ""
authors = [
    { name = "foad.kheirabady", email = "foad.kheirabady@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4.0",
    "aiofiles>=23.1,<24.0",
    "colorama>=0.4.6,<1.0",
    "pydantic>=2.0,<3.0",
    "typing_extensions>=4.0,<5.0",
    "blackboxprotobuf>=1.0.1,<2.0",
    "magic-filter>=1.0,<2.0",
]

[tool.poetry]
packages = [
    { include = "BaleClient" },
]

[[tool.poetry.source]]

url = "https://"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
